Fix QR Code img overflow

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -18,7 +18,6 @@ html, body{
 
 .navbar-content > img {
   width: 40px;
-
 }
 
 .inputfields {
@@ -47,7 +46,7 @@ form {
 
 #qrcode {
   width: 50%;
-  height: 70%;
+  min-height: 70%;
   border: 1px solid rgb(90, 90, 90);
   text-align: center;
 }
@@ -73,7 +72,7 @@ form {
 
   #qrcode {
     width: 70%;
-    height: 40%;
+    min-height: 40%;
     margin: 20px auto;
   }
 
